Adds features to #72
Added imageonload directive
CSS fixes
Added parts of wall preview

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -655,3 +655,18 @@
   justify-content: center; /* Optional, to align inner items 
                               horizontally inside the column */
 }
+/*.spinner-hide .loading{
+  visibility: visible;
+}
+.spinner-show .loading{
+  visibility: hidden;
+}*/
+
+.wall-preview {
+	background-color: #aaa;
+	position: relative;
+	/*display: inline-block;*/
+	.wall-preview-header {
+		height: 100px;
+	}
+}
