--- a/app/views/wall/templates/linear.html
+++ b/app/views/wall/templates/linear.html
@@ -1,5 +1,5 @@
 <div ng-attr-id="{{data.id_str}}" ng-init="showdetail = false" class="linear linear-simple">
-    <img class="avatar" onError="this.onerror=null;this.src='/images/anon_200x200.png';" ng-src="{{data.user.profile_image_url}}" alt="user-images">
+    <img imageonload class="avatar spinner" onError="this.onerror=null;this.src='/images/anon_200x200.png';" ng-src="{{data.user.profile_image_url}}" alt="user-images">
     <div class="linear-content" ng-click="showdetail = !showdetail">
         <!-- Main content -->
         <p class="linear-content-text" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
@@ -7,7 +7,7 @@
         <!--         <div data-ng-click="open(data.id_str);" ng-class="{'images-wrapper': true, 'showdetail': showdetail}" ng-if="data.images_count"> -->
         <div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick">
             <div class="masonry-brick" ng-repeat="image in data.images">
-                <img ng-cloak class="masonry-image" ng-src="{{image}}" alt="A masonry brick">
+                <img ng-click="wall.open()" imageonload ng-cloak class="masonry-image spinner" ng-src="{{image}}" alt="A masonry brick">
             </div>
         </div>
         <!-- Metadata -->
